Fixed layout break near midnight

--- a/src/plaid/components/current-time-marker/current-time-marker.component.scss
+++ b/src/plaid/components/current-time-marker/current-time-marker.component.scss
@@ -1,3 +1,12 @@
+:host {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .time-marker {
   position: absolute;
   left: 30px;
